extruturacao do readme

--- a/html/hub.htm
+++ b/html/hub.htm
@@ -6,6 +6,8 @@
     
     <title>arte pelo mundo 🌎</title>
 
+    <link rel="shortcut icon" href="../imagens/favcon-socrates.jpg" type="image/x-icon">
+
     <link rel="stylesheet" href="../css/resets.css">
 </head>
 <body>
