--- a/html-css/michelangelo/michelangelo.html
+++ b/html-css/michelangelo/michelangelo.html
@@ -54,7 +54,7 @@
                 <p class="texto-cap1">
                     Michelangelo Buonarroti nasceu em 6 de março de 1475, 
                     na Toscana, Itália. Poucos meses após seu nascimento, Michelangelo foi levado para Florença, cidade para onde sua família se mudou.
-" A infância de Michelangelo foi marcada pelo falecimento de sua mãe em 1481."
+ A infância de Michelangelo foi marcada pelo falecimento de sua mãe em 1481.
                     Desde cedo mostrou talento para as artes e, aos 13 anos,
                      tornou-se aprendiz no ateliê de Domenico Ghirlandaio,
                       onde aprendeu técnicas de pintura e escultura.
