--- a/html-css/michelangelo/michelangelo.html
+++ b/html-css/michelangelo/michelangelo.html
@@ -61,7 +61,7 @@
                 </p>
             </div>
             <abbr title="Infância de Michelangelo">
-                <img src="imagens-michelangelo/img-cap1.jpg">
+                <img src="imagens-michelangelo/michelangelo_2.JPG">
             </abbr>
         </section>
 
@@ -82,7 +82,9 @@
                 </p>
             </div>
             <abbr title="Davi de Michelangelo">
-                <center><img src="imagens-michelangelo/img-cap2.jpg"></center>
+                <center>
+                    <img src="imagens-michelangelo/david_escultura.jpg" style="width:50%; height:auto;">
+                </center>
             </abbr>
         </section>
 
