finalização pag michelangelo

--- a/html-css/daVinci/daVinci.html
+++ b/html-css/daVinci/daVinci.html
@@ -239,7 +239,7 @@
 
 
     <h2 style="text-align: center; font-size: 2rem;">
-        Escolha um dos grandes genios para continuar!
+        Escolha um dos grandes gênios para continuar!
     </h2>
     <section class="menu-imagens">
 
