--- a/html-css/michelangelo/michelangelo.html
+++ b/html-css/michelangelo/michelangelo.html
@@ -52,12 +52,7 @@
                 </h2>
                 
                 <p class="texto-cap1">
-                    Michelangelo Buonarroti nasceu em 6 de março de 1475, 
-                    na Toscana, Itália. Poucos meses após seu nascimento, Michelangelo foi levado para Florença, cidade para onde sua família se mudou.
- A infância de Michelangelo foi marcada pelo falecimento de sua mãe em 1481.
-                    Desde cedo mostrou talento para as artes e, aos 13 anos,
-                     tornou-se aprendiz no ateliê de Domenico Ghirlandaio,
-                      onde aprendeu técnicas de pintura e escultura.
+                    Michelangelo Buonarroti nasceu em 6 de março de 1475, na Toscana, Itália. Poucos meses após seu nascimento, Michelangelo foi levado para Florença, cidade para onde sua família se mudou. A infância de Michelangelo foi marcada pelo falecimento de sua mãe em 1481. Desde cedo mostrou talento para as artes e, aos 13 anos, tornou-se aprendiz no ateliê de Domenico Ghirlandaio, onde aprendeu técnicas de pintura e escultura.
                 </p>
             </div>
             <abbr title="Infância de Michelangelo">
@@ -67,32 +62,35 @@
 
         <hr style="margin: 0 7rem;">
 
-        <section class="conteiner-cap2">
-            <div class="conteudo-cap2 conteudos">
+        <section class="conteiner-cap2" style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
+            <div class="conteudo-cap2 conteudos" style="max-width: 600px; text-align: center;"></div>
                 <h2 class="titulo-cap2">
                     O Escultor e Pintor
                 </h2>
                 <p class="texto-cap2">
                     Michelangelo é conhecido por suas esculturas impressionantes, como:
-                    <ul>
+                    <ul style="text-align: center;"></ul>
                         <li>Davi (1504): símbolo da força e beleza humana.</li>
                         <li>Pietà (1499): emocionante representação de Maria com Jesus nos braços.</li>
                     </ul>
                     Ele também pintou o teto da Capela Sistina, uma das maiores obras da arte ocidental.
                 </p>
             </div>
-            <abbr title="Davi de Michelangelo">
-                <center>
-                    <img src="imagens-michelangelo/david_escultura.jpg" style="width:50%; height:auto;">
-                </center>
-            </abbr>
+            <div class="imagens-cap2" style="display: flex; gap: 2rem; margin-top: 2rem; align-items: center;">
+                <abbr title="Pietà de Michelangelo">
+                    <img src="imagens-michelangelo/Pietá.jpg" style="width: 280px; height: auto;">
+                </abbr>
+                <abbr title="Teto da Capela Sistina">
+                    <img src="imagens-michelangelo/capela_sistena.png" style="width: 480px; height: auto;">
+                </abbr>
+            </div>
         </section>
 
         <hr style="margin: 0 7rem;">
 
         <section class="conteiner-cap3">
             <abbr title="Capela Sistina">
-                <img src="imagens-michelangelo/img-cap3.jpg">
+                <img src="imagens-michelangelo/sãopedro.webp" style="width: 90%; height: auto; margin-bottom: 1rem;">
             </abbr>
             <div class="conteudo-cap3 conteudos">
                 <h2 class="titulo-cap3">
@@ -121,13 +119,13 @@
                 </p>
             </div>
             <abbr title="Autorretrato de Michelangelo">
-                <img src="imagens-michelangelo/img-cap4.jpg">
+                <img src="imagens-michelangelo/michelangelo_autorretrato - Editado.jpg" style="width: 80%; height: auto; margin-bottom: 1rem;">
             </abbr>
         </section>
 
         <hr style="margin: 0 7rem;">
 
-        <section class="conteiner-cap5-6">
+        <section class="conteiner-cap5-6" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
             <div class="conteudo-cap5 conteudos">
                 <h2 class="titulo-cap5">
                     Legado Imortal
@@ -137,9 +135,10 @@
                 </p>
             </div>
         </section>
+        <hr style="margin: 3 7rem;">
     </main>
 
-    <h2 style="text-align: center; font-size: 2rem;">
+    <h2 style="text-align: center; font-size: 2rem;margin-top: 2%;">
         Escolha um dos grandes gênios para continuar!
     </h2>
     <section class="menu-imagens">
