--- a/html-css/bach/bach.html
+++ b/html-css/bach/bach.html
@@ -195,7 +195,7 @@
 
 
     <h2 style="text-align: center; font-size: 2rem;">
-        Escolha um dos grandes genios para continuar!
+        Escolha um dos grandes gênios para continuar!
     </h2>
     <section class="menu-imagens">
 
