--- a/html-css/michelangelo/michelangelo.html
+++ b/html-css/michelangelo/michelangelo.html
@@ -54,9 +54,7 @@
                     Michelangelo Buonarroti nasceu em 6 de março de 1475, na Toscana, Itália. Poucos meses após seu nascimento, Michelangelo foi levado para Florença, cidade para onde sua família se mudou. A infância de Michelangelo foi marcada pelo falecimento de sua mãe em 1481. Desde cedo mostrou talento para as artes e, aos 13 anos, tornou-se aprendiz no ateliê de Domenico Ghirlandaio, onde aprendeu técnicas de pintura e escultura.
                 </p>
             </div>
-            <abbr title="Infância de Michelangelo">
-                <img src="imagens-michelangelo/michelangelo_2.JPG">
-            </abbr>
+            <img src="imagens-michelangelo/michelangelo_2.JPG">
         </section>
 
         <hr style="margin: 0 7rem;">
@@ -134,7 +132,7 @@
                 </p>
             </div>
         </section>
-        <hr style="margin: 3 7rem;">
+        <hr style="margin: 3rem 7rem;">
     </main>
 
     <h2 style="text-align: center; font-size: 2rem;margin-top: 2%;">
