--- a/html-css/daVinci/daVinci.html
+++ b/html-css/daVinci/daVinci.html
@@ -53,7 +53,7 @@
                     <p>Bach</p>
                 </li>
             </a>
-            <a href="../elvis/elvis.html" class="links">
+            <a href="../Elvis/html/Elvispresley.html" class="links">
                 <li>
                     <p>Elvis</p>
                 </li>
