--- a/html-css/michelangelo/michelangelo.html
+++ b/html-css/michelangelo/michelangelo.html
@@ -23,7 +23,7 @@
                 <a href="../jackson/jackson.html" class="links"><li><p>Michael Jackson</p></li></a>
                 <a href="../beethoven/beethoven.html" class="links"><li><p>Beethoven</p></li></a>
                 <a href="../bach/bach.html" class="links"><li><p>Bach</p></li></a>
-                <a href="../elvis/elvis.html" class="links"><li><p>Elvis</p></li></a>
+                <a href="../Elvis/html/Elvispresley.html" class="links"><li><p>Elvis</p></li></a>
             </ul>
         </nav>
 
