--- a/html-css/bach/bach.html
+++ b/html-css/bach/bach.html
@@ -48,7 +48,7 @@
                     <p>Bach</p>
                 </li>
             </a>
-            <a href="../elvis/elvis.html" class="links">
+            <a href="../Elvis/html/Elvispresley.html" class="links">
                 <li>
                     <p>Elvis</p>
                 </li>
