Retirada total vangogh

--- a/html-css/Elvis/html/Elvispresley.html
+++ b/html-css/Elvis/html/Elvispresley.html
@@ -17,9 +17,8 @@
      <ul class="linksnavega" >
        <li > <a href="../../daVinci/daVinci.html"><button> Leonardo Davinci</button></a> </li>
        <li  > <a href="../../michelangelo/michelangelo.html"> <button>michelangelo</button></a> </li>
- <li  > <a href="../../vanGogh/vanGogh.html"><button > Van Gogh</button></a> </li>
  <li> <a href="../../jackson/jackson.html"><button> Michael Jackson</button></a>  </li>
-<li  > <a href="../../beethoven/beethoven.html"><button> Beethoven</button> </a> </li>
+<li  > <a href="../../beethoven/artes.html"><button> Beethoven</button> </a> </li>
 <li  > <a href="../../bach/bach.html"><button> Bach</button> </a> </li>
      </ul>
 
