--- a/html-css/bach/bach.html
+++ b/html-css/bach/bach.html
@@ -38,7 +38,7 @@
                     <p>Michael Jackson</p>
                 </li>
             </a>
-            <a href="../beethoven/beethoven.html" class="links">
+            <a href="../beethoven/artes.html" class="links">
                 <li>
                     <p>Beethoven</p>
                 </li>
