--- a/html-css/daVinci/daVinci.html
+++ b/html-css/daVinci/daVinci.html
@@ -33,17 +33,13 @@
                     <p>Michelangelo</p>
                 </li>
             </a>
-            <a href="../vanGogh/vanGogh.html" class="links">
-                <li>
-                    <p>Van Gogh</p>
-                </li>
             </a>
             <a href="../jackson/jackson.html" class="links">
                 <li>
                     <p>Michael Jackson</p>
                 </li>
             </a>
-            <a href="../beethoven/beethoven.html" class="links">
+            <a href="../beethoven/artes.html" class="links">
                 <li>
                     <p>Beethoven</p>
                 </li>
