--- a/html-css/michelangelo/michelangelo.html
+++ b/html-css/michelangelo/michelangelo.html
@@ -21,7 +21,7 @@
                 <a href="../daVinci/daVinci.html" class="links"><li><p>Da Vinci</p></li></a>
                 <a href="../michelangelo/michelangelo.html" class="links"><li><p>Michelangelo</p></li></a>
                 <a href="../jackson/jackson.html" class="links"><li><p>Michael Jackson</p></li></a>
-                <a href="../beethoven/beethoven.html" class="links"><li><p>Beethoven</p></li></a>
+                <a href="../beethoven/artes.html" class="links"><li><p>Beethoven</p></li></a>
                 <a href="../bach/bach.html" class="links"><li><p>Bach</p></li></a>
                 <a href="../Elvis/html/Elvispresley.html" class="links"><li><p>Elvis</p></li></a>
             </ul>
