--- a/html-css/Elvis/html/Elvispresley.html
+++ b/html-css/Elvis/html/Elvispresley.html
@@ -14,12 +14,13 @@
 <body background color="white">
    <header id="navbar">
    <nav>
-     <ul class="linksnavega" >
+     <ul class="linksnavega">
        <li > <a href="../../daVinci/daVinci.html"><button> Leonardo Davinci</button></a> </li>
        <li  > <a href="../../michelangelo/michelangelo.html"> <button>michelangelo</button></a> </li>
- <li> <a href="../../jackson/jackson.html"><button> Michael Jackson</button></a>  </li>
+ <li  > <a href="../../jackson/jackson.html"><button> Michael Jackson</button></a>  </li>
 <li  > <a href="../../beethoven/artes.html"><button> Beethoven</button> </a> </li>
 <li  > <a href="../../bach/bach.html"><button> Bach</button> </a> </li>
+<li  > <a href="/index.html"><button id="home"> home</button> </a> </li>
      </ul>
 
       </nav>
