--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <p>Bach</p>
                 </li>
             </a>
-            <a href="html-css/elvis/elvis.html" class="links">
+            <a href="html-css/Elvis/html/Elvispresley.html" class="links">
                 <li>
                     <p>Elvis</p>
                 </li>
